src_cuda/fdtd_cuda_api.F90


   interface
      function fdtd_cuda_create() bind(C, name="fdtd_cuda_create")
         import :: c_ptr
         type(c_ptr) :: fdtd_cuda_create
      end function
      subroutine fdtd_cuda_destroy(ctx) bind(C, name="fdtd_cuda_destroy")
         import :: c_ptr
         type(c_ptr), value :: ctx
      end subroutine
      function fdtd_cuda_ok(ctx) bind(C, name="fdtd_cuda_ok")
         import :: c_ptr, c_int
         type(c_ptr), value :: ctx
         integer(c_int) :: fdtd_cuda_ok
      end function
      function fdtd_cuda_alloc_fields(ctx, ex, ey, ez, hx, hy, hz) &
         bind(C, name="fdtd_cuda_alloc_fields")
         import :: c_ptr, c_int, fdtd_dims3_c
         type(c_ptr), value :: ctx
         type(fdtd_dims3_c), value :: ex, ey, ez, hx, hy, hz
         integer(c_int) :: fdtd_cuda_alloc_fields
      end function
      function fdtd_cuda_alloc_media(ctx, mex, mey, mez, mhx, mhy, mhz) &
         bind(C, name="fdtd_cuda_alloc_media")
         import :: c_ptr, c_int, fdtd_dims3_c
         type(c_ptr), value :: ctx
         type(fdtd_dims3_c), value :: mex, mey, mez, mhx, mhy, mhz
         integer(c_int) :: fdtd_cuda_alloc_media
      end function
      function fdtd_cuda_alloc_coeffs(ctx, num_media) bind(C, name="fdtd_cuda_alloc_coeffs")
         import :: c_ptr, c_int
         type(c_ptr), value :: ctx
         integer(c_int), value :: num_media
         integer(c_int) :: fdtd_cuda_alloc_coeffs
      end function
      function fdtd_cuda_alloc_metrics(ctx, n_idxh, n_idyh, n_idzh, n_idxe, n_idye, n_idze) &
         bind(C, name="fdtd_cuda_alloc_metrics")
         import :: c_ptr, c_int
         type(c_ptr), value :: ctx
         integer(c_int), value :: n_idxh, n_idyh, n_idzh, n_idxe, n_idye, n_idze
         integer(c_int) :: fdtd_cuda_alloc_metrics
      end function
      function fdtd_cuda_upload_fields(ctx, Ex, Ey, Ez, Hx, Hy, Hz) &
         bind(C, name="fdtd_cuda_upload_fields")
         import :: c_ptr, c_int, c_float
         type(c_ptr), value :: ctx
         real(c_float), intent(in) :: Ex(*), Ey(*), Ez(*), Hx(*), Hy(*), Hz(*)
         integer(c_int) :: fdtd_cuda_upload_fields
      end function
      function fdtd_cuda_download_fields(ctx, Ex, Ey, Ez, Hx, Hy, Hz) &
         bind(C, name="fdtd_cuda_download_fields")
         import :: c_ptr, c_int, c_float
         type(c_ptr), value :: ctx
         real(c_float), intent(out) :: Ex(*), Ey(*), Ez(*), Hx(*), Hy(*), Hz(*)
         integer(c_int) :: fdtd_cuda_download_fields
      end function
      function fdtd_cuda_upload_fields_box(ctx, Ex, Ey, Ez, Hx, Hy, Hz, &
                                           bex, bey, bez, bhx, bhy, bhz) &
         bind(C, name="fdtd_cuda_upload_fields_box")
         import :: c_ptr, c_int, c_float, fdtd_ibox_c
         type(c_ptr), value :: ctx
         real(c_float), intent(in) :: Ex(*), Ey(*), Ez(*), Hx(*), Hy(*), Hz(*)
         type(fdtd_ibox_c), intent(in) :: bex, bey, bez, bhx, bhy, bhz
         integer(c_int) :: fdtd_cuda_upload_fields_box
      end function
      function fdtd_cuda_download_fields_box(ctx, Ex, Ey, Ez, Hx, Hy, Hz, &
                                             bex, bey, bez, bhx, bhy, bhz) &
         bind(C, name="fdtd_cuda_download_fields_box")
         import :: c_ptr, c_int, c_float, fdtd_ibox_c
         type(c_ptr), value :: ctx
         real(c_float), intent(out) :: Ex(*), Ey(*), Ez(*), Hx(*), Hy(*), Hz(*)
         type(fdtd_ibox_c), intent(in) :: bex, bey, bez, bhx, bhy, bhz
         integer(c_int) :: fdtd_cuda_download_fields_box
      end function
      function fdtd_cuda_upload_media(ctx, mex, mey, mez, mhx, mhy, mhz) &
         bind(C, name="fdtd_cuda_upload_media")
         import :: c_ptr, c_int, c_short
         type(c_ptr), value :: ctx
         integer(c_short), intent(in) :: mex(*), mey(*), mez(*), mhx(*), mhy(*), mhz(*)
         integer(c_int) :: fdtd_cuda_upload_media
      end function
      function fdtd_cuda_upload_coeffs(ctx, g1, g2, gm1, gm2, num_media) &
         bind(C, name="fdtd_cuda_upload_coeffs")
         import :: c_ptr, c_int, c_float
         type(c_ptr), value :: ctx
         real(c_float), intent(in) :: g1(*), g2(*), gm1(*), gm2(*)
         integer(c_int), value :: num_media
         integer(c_int) :: fdtd_cuda_upload_coeffs
      end function
      function fdtd_cuda_upload_metrics(ctx, Idxh, Idyh, Idzh, Idxe, Idye, Idze) &
         bind(C, name="fdtd_cuda_upload_metrics")
         import :: c_ptr, c_int, c_float
         type(c_ptr), value :: ctx
         real(c_float), intent(in) :: Idxh(*), Idyh(*), Idzh(*), Idxe(*), Idye(*), Idze(*)
         integer(c_int) :: fdtd_cuda_upload_metrics
      end function
      function fdtd_cuda_advance_ex(ctx, sweep) bind(C, name="fdtd_cuda_advance_ex")
         import :: c_ptr, c_int, fdtd_ibox_c
         type(c_ptr), value :: ctx
         type(fdtd_ibox_c), value :: sweep
         integer(c_int) :: fdtd_cuda_advance_ex
      end function
      function fdtd_cuda_advance_ey(ctx, sweep) bind(C, name="fdtd_cuda_advance_ey")
         import :: c_ptr, c_int, fdtd_ibox_c
         type(c_ptr), value :: ctx
         type(fdtd_ibox_c), value :: sweep
         integer(c_int) :: fdtd_cuda_advance_ey
      end function
      function fdtd_cuda_advance_ez(ctx, sweep) bind(C, name="fdtd_cuda_advance_ez")
         import :: c_ptr, c_int, fdtd_ibox_c
         type(c_ptr), value :: ctx
         type(fdtd_ibox_c), value :: sweep
         integer(c_int) :: fdtd_cuda_advance_ez
      end function
      function fdtd_cuda_advance_hx(ctx, sweep) bind(C, name="fdtd_cuda_advance_hx")
         import :: c_ptr, c_int, fdtd_ibox_c
         type(c_ptr), value :: ctx
         type(fdtd_ibox_c), value :: sweep
         integer(c_int) :: fdtd_cuda_advance_hx
      end function
      function fdtd_cuda_advance_hy(ctx, sweep) bind(C, name="fdtd_cuda_advance_hy")
         import :: c_ptr, c_int, fdtd_ibox_c
         type(c_ptr), value :: ctx
         type(fdtd_ibox_c), value :: sweep
         integer(c_int) :: fdtd_cuda_advance_hy
      end function
      function fdtd_cuda_advance_hz(ctx, sweep) bind(C, name="fdtd_cuda_advance_hz")
         import :: c_ptr, c_int, fdtd_ibox_c
         type(c_ptr), value :: ctx
         type(fdtd_ibox_c), value :: sweep
         integer(c_int) :: fdtd_cuda_advance_hz
      end function
      function fdtd_cuda_alloc_psi(ctx, slot, n_elem) bind(C, name="fdtd_cuda_alloc_psi")
         import :: c_ptr, c_int
         type(c_ptr), value :: ctx
         integer(c_int), value :: slot, n_elem
         integer(c_int) :: fdtd_cuda_alloc_psi
      end function
      function fdtd_cuda_upload_psi(ctx, slot, psi, n_elem) bind(C, name="fdtd_cuda_upload_psi")
         import :: c_ptr, c_int, c_float
         type(c_ptr), value :: ctx
         integer(c_int), value :: slot, n_elem
         real(c_float), intent(in) :: psi(*)
         integer(c_int) :: fdtd_cuda_upload_psi
      end function
      function fdtd_cuda_download_psi(ctx, slot, psi, n_elem) bind(C, name="fdtd_cuda_download_psi")
         import :: c_ptr, c_int, c_float
         type(c_ptr), value :: ctx
         integer(c_int), value :: slot, n_elem
         real(c_float), intent(out) :: psi(*)
         integer(c_int) :: fdtd_cuda_download_psi
      end function
      function fdtd_cuda_alloc_cpml_1d(ctx, which, n, host) bind(C, name="fdtd_cuda_alloc_cpml_1d")
         import :: c_ptr, c_int, c_float
         type(c_ptr), value :: ctx
         integer(c_int), value :: which, n
         real(c_float), intent(in) :: host(*)
         integer(c_int) :: fdtd_cuda_alloc_cpml_1d
      end function
      function fdtd_cuda_cpml_apply(ctx, job) bind(C, name="fdtd_cuda_cpml_apply")
         import :: c_ptr, c_int, fdtd_cpml_job_c
         type(c_ptr), value :: ctx
         type(fdtd_cpml_job_c), intent(in) :: job
         integer(c_int) :: fdtd_cuda_cpml_apply
      end function
      function fdtd_cuda_set_point_probes(ctx, n, comp, i, j, k) &
         bind(C, name="fdtd_cuda_set_point_probes")
         import :: c_ptr, c_int
         type(c_ptr), value :: ctx
         integer(c_int), value :: n
         integer(c_int), intent(in) :: comp(*), i(*), j(*), k(*)
         integer(c_int) :: fdtd_cuda_set_point_probes
      end function
      function fdtd_cuda_gather_point_probes(ctx, out) bind(C, name="fdtd_cuda_gather_point_probes")
         import :: c_ptr, c_int, c_float
         type(c_ptr), value :: ctx
         real(c_float), intent(out) :: out(*)
         integer(c_int) :: fdtd_cuda_gather_point_probes
      end function
      function fdtd_cuda_upload_planewave_phys(ctx, field, axis, base_abs, n, host) &
         bind(C, name="fdtd_cuda_upload_planewave_phys")
         import :: c_ptr, c_int, c_float
         type(c_ptr), value :: ctx
         integer(c_int), value :: field, axis, base_abs, n
         real(c_float), intent(in) :: host(*)
         integer(c_int) :: fdtd_cuda_upload_planewave_phys
      end function
      function fdtd_cuda_upload_planewave(ctx, n_waves, max_modes, max_numus, cluz, &
         num_modes, numus, deltaevol, evol, px, py, pz, d0, fpw, &
         faces_e, n_faces_e, faces_h, n_faces_h) bind(C, name="fdtd_cuda_upload_planewave")
         import :: c_ptr, c_int, c_float, fdtd_pw_face_c
         type(c_ptr), value :: ctx
         integer(c_int), value :: n_waves, max_modes, max_numus, n_faces_e, n_faces_h
         real(c_float), value :: cluz
         integer(c_int), intent(in) :: num_modes(*), numus(*)
         real(c_float), intent(in) :: deltaevol(*), evol(*), px(*), py(*), pz(*), d0(*), fpw(*)
         type(fdtd_pw_face_c), intent(in) :: faces_e(*), faces_h(*)
         integer(c_int) :: fdtd_cuda_upload_planewave
      end function
      function fdtd_cuda_planewave_ready(ctx) bind(C, name="fdtd_cuda_planewave_ready")
         import :: c_ptr, c_int
         type(c_ptr), value :: ctx
         integer(c_int) :: fdtd_cuda_planewave_ready
      end function
      function fdtd_cuda_advance_planewave_e(ctx, time, still_out) &
         bind(C, name="fdtd_cuda_advance_planewave_e")
         import :: c_ptr, c_int, c_float
         type(c_ptr), value :: ctx
         real(c_float), value :: time
         integer(c_int), intent(out) :: still_out
         integer(c_int) :: fdtd_cuda_advance_planewave_e
      end function
      function fdtd_cuda_advance_planewave_h(ctx, time, still_out) &
         bind(C, name="fdtd_cuda_advance_planewave_h")
         import :: c_ptr, c_int, c_float
         type(c_ptr), value :: ctx
         real(c_float), value :: time
         integer(c_int), intent(out) :: still_out
         integer(c_int) :: fdtd_cuda_advance_planewave_h
      end function
      function fdtd_cuda_upload_mur_cab(ctx, which, n, host) bind(C, name="fdtd_cuda_upload_mur_cab")
         import :: c_ptr, c_int, c_float
         type(c_ptr), value :: ctx
         integer(c_int), value :: which, n
         real(c_float), intent(in) :: host(*)
         integer(c_int) :: fdtd_cuda_upload_mur_cab
      end function
      function fdtd_cuda_set_mur_jobs(ctx, jobs, n_jobs) bind(C, name="fdtd_cuda_set_mur_jobs")
         import :: c_ptr, c_int, fdtd_mur_job_c
         type(c_ptr), value :: ctx
         type(fdtd_mur_job_c), intent(in) :: jobs(*)
         integer(c_int), value :: n_jobs
         integer(c_int) :: fdtd_cuda_set_mur_jobs
      end function
      function fdtd_cuda_upload_mur_past(ctx, slot, host, n_elem) &
         bind(C, name="fdtd_cuda_upload_mur_past")
         import :: c_ptr, c_int, c_float
         type(c_ptr), value :: ctx
         integer(c_int), value :: slot, n_elem
         real(c_float), intent(in) :: host(*)
         integer(c_int) :: fdtd_cuda_upload_mur_past
      end function
      function fdtd_cuda_mur_ready(ctx) bind(C, name="fdtd_cuda_mur_ready")
         import :: c_ptr, c_int
         type(c_ptr), value :: ctx
         integer(c_int) :: fdtd_cuda_mur_ready
      end function
      function fdtd_cuda_advance_mur(ctx) bind(C, name="fdtd_cuda_advance_mur")
         import :: c_ptr, c_int
